// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LogItem renders LogItem with input consistently 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#16181a",
        "borderColor": "#232529",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 20,
      },
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#15171C",
        "borderRadius": 8,
        "height": 32,
        "justifyContent": "center",
        "marginRight": 16,
        "width": 32,
      }
    }
  >
    <View
      color="#94a3b8"
      size={20}
      testID="icon-Dumbbell"
    />
  </View>
  <View>
    <Text
      style={
        [
          {
            "fontFamily": "Manrope_500Medium",
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#FFF",
          },
          undefined,
        ]
      }
    >
      Weight
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginLeft": "auto",
      }
    }
  >
    <TextInput
      keyboardType="decimal-pad"
      onChangeText={[Function]}
      placeholder="00.0"
      placeholderTextColor="#6B7280"
      style={
        {
          "color": "#FFF",
          "fontFamily": "Manrope_500Medium",
          "fontSize": 18,
          "fontWeight": "500",
          "padding": 0,
          "textAlign": "right",
          "width": 60,
        }
      }
      value="75"
    />
    <Text
      style={
        [
          {
            "fontFamily": "Manrope_500Medium",
            "fontSize": 12,
            "fontWeight": "500",
          },
          {
            "color": "#6B7280",
          },
          undefined,
        ]
      }
    >
      kg
    </Text>
  </View>
</View>
`;

exports[`LogItem renders LogItem with toggle consistently 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#16181a",
        "borderColor": "#232529",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 20,
      },
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#15171C",
        "borderRadius": 8,
        "height": 32,
        "justifyContent": "center",
        "marginRight": 16,
        "width": 32,
      }
    }
  >
    <View
      color="#94a3b8"
      size={20}
      testID="icon-Dumbbell"
    />
  </View>
  <View>
    <Text
      style={
        [
          {
            "fontFamily": "Manrope_500Medium",
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#FFF",
          },
          undefined,
        ]
      }
    >
      Exercise
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": "auto",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderColor": "#232529",
              "borderRadius": 9999,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 32,
              "paddingHorizontal": 4,
              "position": "relative",
              "width": 64,
            },
            {
              "backgroundColor": "#1f2226",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Manrope_500Medium",
                "fontSize": 9,
                "fontWeight": "900",
                "position": "absolute",
              },
              {
                "left": 8,
              },
              {
                "opacity": 0.9,
              },
            ]
          }
        >
          YES
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#FFF",
                "borderRadius": 9999,
                "height": 24,
                "width": 24,
                "zIndex": 10,
              },
              {
                "transform": [
                  {
                    "translateX": 28,
                  },
                ],
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Manrope_500Medium",
                "fontSize": 9,
                "fontWeight": "900",
                "position": "absolute",
              },
              {
                "color": "#6B7280",
                "right": 8,
              },
              {
                "opacity": 0,
              },
            ]
          }
        >
          NO
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`LogItem renders inactive LogItem consistently 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#16181a",
        "borderColor": "#232529",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 20,
      },
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#15171C",
        "borderRadius": 8,
        "height": 32,
        "justifyContent": "center",
        "marginRight": 16,
        "width": 32,
      }
    }
  >
    <View
      color="#94a3b8"
      size={20}
      testID="icon-Dumbbell"
    />
  </View>
  <View>
    <Text
      style={
        [
          {
            "fontFamily": "Manrope_500Medium",
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#FFF",
          },
          undefined,
        ]
      }
    >
      Exercise
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": "auto",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderColor": "#232529",
              "borderRadius": 9999,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 32,
              "paddingHorizontal": 4,
              "position": "relative",
              "width": 64,
            },
            {
              "backgroundColor": "#1f2226",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Manrope_500Medium",
                "fontSize": 9,
                "fontWeight": "900",
                "position": "absolute",
              },
              {
                "left": 8,
              },
              {
                "opacity": 0,
              },
            ]
          }
        >
          YES
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#FFF",
                "borderRadius": 9999,
                "height": 24,
                "width": 24,
                "zIndex": 10,
              },
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Manrope_500Medium",
                "fontSize": 9,
                "fontWeight": "900",
                "position": "absolute",
              },
              {
                "color": "#6B7280",
                "right": 8,
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          NO
        </Text>
      </View>
    </View>
  </View>
</View>
`;
